# Magang_ServerMonitor

agent/: Cargo.toml  Dockerfile
agent/src/: main.rs
k8s/: deploy.yaml  kind-config.yaml
server/: Cargo.toml  Dockerfile
server/src/: main.rs
