[package]
name = "rust-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
# Paksa versi home yang stabil (Solusi error edition2024)
home = "=0.5.9"
rdkafka = { version = "0.36", features = ["cmake-build"]}
tokio = { version = "1.35", features = ["full"] }
rand = "0.8"
# Monitoring file secara event-driven
notify = "6.1"
# Client untuk mengirim data ke Central Server
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }