[package]
name = "central-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Paksa versi home yang stabil (Solusi error edition2024)
home = "=0.5.9"

rdkafka = { version = "0.36", features = ["cmake-build"]}

# Runtime Async untuk Threadpool
tokio = { version = "1.35", features = ["full"] }

# Komunikasi dengan Kubernetes API
kube = { version = "0.90", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.21", features = ["v1_28"] }

# Web Server untuk Dashboard & Websocket
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }

# HTTP Client untuk memanggil Ollama
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"